# crowdify

./: .gitignore  GANT.xlsx  README.md  hello.txt  inserter.cpp  yosup.txt
blockStoreToIMP/: zmqtest.sln
client/client/: client.sln
dhtSim/: sdl_test.opensdf  sdl_test.sln
disk-read/: CMakeLists.txt  disk-read.c
disk-read-ng/: CMakeLists.txt  blocks.h  configsql.h  main.cpp  sqlconfig.cpp
disk-read-nxt/: README  insert.cpp
exec/: README.txt  web_interface.url
scu-thesis/: Activity Diagram.mdj  Requirements.tex  abstract.aux  abstract.tex  acknowledgements.tex  activitydiagram.aux  activitydiagram.tex  architecture.tex  backend.tex  background.tex  conceptual.tex  conclusion.tex  design.tex  designrationale.tex  introduction.aux  introduction.tex  master.aux  master.bbl  master.bib  master.blg  master.lof  master.tex  master.toc  riskanalysis.tex  scu-thesis.cls  societalconcerns.aux  societalconcerns.tex  storage-implementation.tex  testingplan.aux  testingplan.tex  timeline.tex  todofinal.txt  usecases.tex  user-model.tex
server/: UDP_Receiver_with_wolfssl.cpp  buildwolf.sh
web interface/: index.php
web-interface/: 10-26-2016.txt  10-29-2016.txt  11-01-2016.txt  11-04-2016.txt  11-07-2016.txt  11-10-2016.txt  11-16-2016.txt  11-19-2016.txt  add_dirs.cpp  all_dirs.txt  backup_now.cpp  backup_now.php  dates.txt  dirs.txt  dirs_for_date.php  excludes.txt  files.txt  getBackupDirs.cpp  getDirs.cpp  getDirsForDate.cpp  getExcludes.cpp  index.php  index_table.php  jquery.timepicker.js  mod_dirs.cpp  remove_dirs.cpp  restore.php  restore_now.cpp  save.php
(+67 files in other folders)
