cmake_minimum_required (VERSION 2.6)
project (disk-io)
set(CMAKE_BUILD_TYPE Debug)
include_directories(/usr/include/mysql/ /usr/include/mysql++/)
link_directories(/home/ormris/src/mongo-cxx-driver/build/linux2/normal/)
add_executable(sql_insert main.cpp)
add_executable(configsql sqlconfig.cpp)
target_link_libraries(sql_insert mhash ssh2 mysqlpp)
target_link_libraries(configsql mhash ssh2 mysqlpp)
